# wake_word

./: .gitignore  .readthedocs.yaml  README.md  config.yaml  main.py  pyproject.toml  test.py  train.py
docs/: requirements.txt
docs/ai/: jade_wakeword_setup.md  jade_wakeword_training.md
docs/source/: advanced_usage.md  conf.py  config.md  index.md  quick_start.md
docs/source/apidocs/: index.rst
docs/source/apidocs/listening_neuron/: listening_neuron.config.rst  listening_neuron.listening_neuron.rst  listening_neuron.logging_config.rst  listening_neuron.mic.rst  listening_neuron.recording_device.rst  listening_neuron.rst  listening_neuron.transcription.rst
docs/source/apidocs/listening_node/: listening_node.config.rst  listening_node.listening_node.rst  listening_node.logging_config.rst  listening_node.mic.rst  listening_node.recording_device.rst  listening_node.rst  listening_node.transcription.rst
wake_word/: base.py  collect_wake_word.py  config.py  engines.py  generate.py  package.py  train.py  tts_base.py
